# pydantic-ai-optimizers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
examples/chef/: README.md  agent.py  dataset.py  evaluators.py  optimize.py
examples/chef/data/: allergens.json  recipes.json
examples/chef/evals/: chef_cases.yaml  chef_cases_schema.json
examples/chef/prompts/: chef_seed.txt
src/pydantic_ai_optimizers/: __init__.py  cli.py  config.py  dataset.py  optimizer.py
src/pydantic_ai_optimizers/agents/: reflection_agent.py
src/pydantic_ai_optimizers/agents/prompts/: reflection_instructions.txt
tests/: test_imports.py
